--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "html-loader": "^0.5.5",
     "jquery": "^3.3.1",
     "vue": "^2.5.13",
-    "web3": "^1.0.0-beta.34",
+    "web3": "0.14.0",
     "web3-utils": "^1.0.0-beta.34",
     "webpack": "^3.10.0"
   },
