--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
+    "babel-plugin-transform-imports": "^1.5.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "browserify": "^15.2.0",
     "bulma": "^0.6.2",
     "eth-sig-util": "^1.4.2",
+    "ethjs": "^0.3.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
     "jquery": "^3.3.1",
